--- a/sections/t-carousel-product.liquid
+++ b/sections/t-carousel-product.liquid
@@ -10,7 +10,7 @@
 {%- endstyle -%}
 <div class="container">
   <div class="section-titles">
-    <h1 style="text-align: {{- section.settings.title_alignment -}} ">{{ section.settings.title |strip_html }}</h1>
+    <h1>{{ section.settings.title |strip_html }}</h1>
   </div>
   <div id="new-arrivals">
     <div class="carousel"
